--- a/404.html
+++ b/404.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>404 – Page Not Found</title>
-  <link rel="stylesheet" href="assets/css/variables.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>404 – Page Not Found</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/buttons.css">
+    <link rel="stylesheet" href="assets/css/layout.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
+    <link rel="stylesheet" href="assets/css/variables.css">
 </head>
-<body>
-  <div class="error-container">
+
+<body><div class="error-container">
     <h1>404</h1>
     <p>Oops! That page doesn’t exist.</p>
     <a href="/home/">Return to Home</a>
   </div>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
