--- a/home/index.html
+++ b/home/index.html
@@ -16,9 +16,9 @@
     <div class="nav-brand"><span>Spaceboi</span></div>
     <div class="nav-right">
         <ul class="nav-links">
-            <li><a href="#/home">Home</a></li>
-            <li><a href="#/portfolio">Portfolio</a></li>
-            <li><a href="#/contact">Contact</a></li>
+            <li><a href="/home/">Home</a></li>
+            <li><a href="/portfolio/">Portfolio</a></li>
+            <li><a href="/contact/">Contact</a></li>
         </ul>
         <div class="nav-controls"><button id="themeToggle" class="theme-toggle", onclick="toggleTheme()"><span id="themeIcon">⏾</span></button><button id="hamburger" class="hamburger">☰</button></div>
     </div>
