--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="refresh" content="0; url=home/">
-    <title>Redirecting…</title>
-    <style>
-      body { margin: 0; background: #000; }
-    </style>
-  </head>
-  <body></body>
-</html>
+<html data-bs-theme="light" lang="en">
 
-<script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Redirecting…</title>
+    <meta http-equiv="refresh" content="0; url=home/">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+</head>
+
+<body><script>
   window.location.href = 'home/';
 </script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/router.js"></script>
+</body>
+
+</html>
