--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
             <div class="nav-controls"><button id="themeToggle" class="theme-toggle" onclick="toggleTheme()"><span id="themeIcon">⏾</span></button><button id="hamburger" class="hamburger">☰</button></div>
         </div>
     </nav><div class="intro-section">
-  <img src="../assets/img/profile.png" class="rounded-circle" alt="Profile Icon">
+  <img src="../assets/img/profile.png" class="border rounded-circle" alt="Profile Icon">
   <div class="intro-text">
     <h1 class="hero-heading">Hey there, I'm Joe 👋</h1>
     <p class="hero-subtext">I'm a 21 y/o gaming and creative enthusiast from England.<br>Specialties include Discord (Guilds/Bots), Minecraft Server Design,<br>Digital Marketing, Web Design, Graphic Design, supporting you!<br>Blending technical precision with digital flair!</p>
@@ -41,21 +41,21 @@
 </div>
 <div class="features-section">
   <div class="feature-card">
-    <svg class="feature-icon">
+    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-ontime" />
     </svg>
     <h4>ON TIME PROMISE</h4>
     <p>Or 25% off<br>— Your time matters (even in orbit)</p>
   </div>
   <div class="feature-card">
-    <svg class="feature-icon">
+    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-quality" />
     </svg>
     <h4>HIGHEST STANDARD GUARANTEED</h4>
     <p>Pixel-perfect, modular, and built to last<br>— "good enough", isn't good enough</p>
   </div>
   <div class="feature-card">
-    <svg class="feature-icon">
+    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-recommended" />
     </svg>
     <h4>RECOMMENDED BY MYSELF</h4>
