--- a/home/index.html
+++ b/home/index.html
@@ -41,21 +41,21 @@
 </div>
 <div class="features-section">
   <div class="feature-card">
-    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+    <svg class="feature-icon" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-ontime" />
     </svg>
     <h4>ON TIME PROMISE</h4>
     <p>Or 25% off<br>— Your time matters (even in orbit)</p>
   </div>
   <div class="feature-card">
-    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+    <svg class="feature-icon" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-quality" />
     </svg>
     <h4>HIGHEST STANDARD GUARANTEED</h4>
     <p>Pixel-perfect, modular, and built to last<br>— "good enough", isn't good enough</p>
   </div>
   <div class="feature-card">
-    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+    <svg class="feature-icon" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-recommended" />
     </svg>
     <h4>RECOMMENDED BY MYSELF</h4>
