--- a/home/index.html
+++ b/home/index.html
@@ -24,7 +24,18 @@
             </ul>
             <div class="nav-controls"><button id="themeToggle" class="theme-toggle" onclick="toggleTheme()"><span id="themeIcon">⏾</span></button><button id="hamburger" class="hamburger">☰</button></div>
         </div>
-    </nav><div class="intro-section">
+    </nav><script>
+  fetch('../assets/img/list.svg')
+    .then(res => res.text())
+    .then(svg => {
+      const div = document.createElement('div');
+      div.style.display = 'none';
+      div.innerHTML = svg;
+      document.body.insertBefore(div, document.body.firstChild);
+    });
+</script>
+
+<div class="intro-section">
   <img src="../assets/img/profile.png" class="border rounded-circle" alt="Profile Icon">
   <div class="intro-text">
     <h1 class="hero-heading">Hey there, I'm Joe 👋</h1>
@@ -41,21 +52,21 @@
 </div>
 <div class="features-section">
   <div class="feature-card">
-    <svg class="feature-icon" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-ontime" />
     </svg>
     <h4>ON TIME PROMISE</h4>
     <p>Or 25% off<br>— Your time matters (even in orbit)</p>
   </div>
   <div class="feature-card">
-    <svg class="feature-icon" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-quality" />
     </svg>
     <h4>HIGHEST STANDARD GUARANTEED</h4>
     <p>Pixel-perfect, modular, and built to last<br>— "good enough", isn't good enough</p>
   </div>
   <div class="feature-card">
-    <svg class="feature-icon" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+    <svg class="feature-icon" width="48" height="48" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
       <use href="#icon-recommended" />
     </svg>
     <h4>RECOMMENDED BY MYSELF</h4>
@@ -63,17 +74,6 @@
   </div>
 </div>
 <hr class="divider">
-
-<script>
-  fetch('../assets/img/list.svg')
-    .then(res => res.text())
-    .then(svg => {
-      const div = document.createElement('div');
-      div.style.display = 'none';
-      div.innerHTML = svg;
-      document.body.insertBefore(div, document.body.firstChild);
-    });
-</script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
