--- a/home/index.html
+++ b/home/index.html
@@ -24,18 +24,7 @@
             </ul>
             <div class="nav-controls"><button id="themeToggle" class="theme-toggle" onclick="toggleTheme()"><span id="themeIcon">⏾</span></button><button id="hamburger" class="hamburger">☰</button></div>
         </div>
-    </nav><script>
-  fetch('../assets/img/list.svg')
-    .then(res => res.text())
-    .then(svg => {
-      const div = document.createElement('div');
-      div.style.display = 'none';
-      div.innerHTML = svg;
-      document.body.insertBefore(div, document.body.firstChild);
-    });
-</script>
-
-<div class="intro-section">
+    </nav><div class="intro-section">
   <img src="../assets/img/profile.png" class="border rounded-circle" alt="Profile Icon">
   <div class="intro-text">
     <h1 class="hero-heading">Hey there, I'm Joe 👋</h1>
@@ -74,6 +63,17 @@
   </div>
 </div>
 <hr class="divider">
+
+<script>
+  fetch('../assets/img/list.svg')
+    .then(res => res.text())
+    .then(svg => {
+      const div = document.createElement('div');
+      div.style.display = 'none';
+      div.innerHTML = svg;
+      document.body.insertBefore(div, document.body.firstChild);
+    });
+</script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
