--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@
     <meta content="Spaceboi - Home" property="og:title" />
     <meta content="Hey there, I'm Joe 👋I'm a 21 y/o gaming and creative enthusiast from England. Specialties include Discord (Guilds/Bots), Minecraft Server Design, Digital Marketing, Web Design, Graphic Design, supporting you! Blending technical precision with digital flair!" property="og:description" />
     <meta content="https://spaceboi.dev/" property="og:url" />
-    <meta content="https://spaceboi.dev/assets/profile.png" property="og:image" />
+    <meta content="https://spaceboi.dev/assets/img/profile.png" property="og:image" />
     <meta content="#58007E" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
