--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Redirecting…</title>
+    <meta content="Spaceboi - Home" property="og:title" />
+    <meta content="Hey there, I'm Joe 👋I'm a 21 y/o gaming and creative enthusiast from England. Specialties include Discord (Guilds/Bots), Minecraft Server Design, Digital Marketing, Web Design, Graphic Design, supporting you! Blending technical precision with digital flair!" property="og:description" />
+    <meta content="https://spaceboi.dev/" property="og:url" />
+    <meta content="https://spaceboi.dev/assets/img/profile.png" property="og:image" />
+    <meta content="#58007E" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="refresh" content="0; url=home/">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/home.css">
