--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="https://spaceboi.dev/" property="og:url" />
     <meta content="https://spaceboi.dev/assets/img/profile.png" property="og:image" />
     <meta content="#58007E" data-react-helmet="true" name="theme-color" />
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta http-equiv="refresh" content="0; url=home/">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/home.css">
