Update Open Graph description in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Redirecting…</title>
     <meta content="Spaceboi - Home" property="og:title" />
-    <meta content="Hey there, I'm Joe 👋                    I'm a 21 y/o gaming and creative enthusiast from England.                     Specialties include Discord (Guilds/Bots), Minecraft Server Design, Digital Marketing, Web Design, Graphic Design, supporting you!                    Blending technical precision with digital flair!" property="og:description" />
+    <meta content="Hey there, I'm Joe 👋 — 21 y/o Gaming enthusiast • Web Design • Graphic Design • Minecraft Servers" />
     <meta content="https://spaceboi.dev/" property="og:url" />
     <meta content="https://spaceboi.dev/assets/img/profile.png" property="og:image" />
     <meta content="#58007E" data-react-helmet="true" name="theme-color" />
