--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Redirecting…</title>
     <meta content="Spaceboi - Home" property="og:title" />
-    <meta content="Hey there, I'm Joe 👋 — 21 y/o Gaming enthusiast • Web Design • Graphic Design • Minecraft Servers" />
+    <meta content="Hey there, I'm Joe 👋 - 21 y/o Gaming enthusiast * Web Design * Graphic Design * Minecraft Servers" />
     <meta content="https://spaceboi.dev/" property="og:url" />
     <meta content="https://spaceboi.dev/assets/img/profile.png" property="og:image" />
     <meta content="#58007E" data-react-helmet="true" name="theme-color" />
