Update Open Graph meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Redirecting…</title>
-    <meta content="Spaceboi - Home" property="og:title" />
-    <meta content="Hey there, I'm Joe 👋 - 21 y/o Gaming enthusiast * Web Design * Graphic Design * Minecraft Servers" />
-    <meta content="https://spaceboi.dev/" property="og:url" />
-    <meta content="https://spaceboi.dev/assets/img/profile.png" property="og:image" />
+    <meta property="og:title" content="Spaceboi - Home" />
+    <meta property="og:description" content="Hey there, I'm Joe 👋 - 21 y/o Gaming enthusiast * Web Design * Graphic Design * Minecraft Servers" />
+    <meta property="og:url" content="https://spaceboi.dev/home/" />
+    <meta property="og:image" content="https://spaceboi.dev/assets/img/profile.png" />
     <meta content="#58007E" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary">
     <meta http-equiv="refresh" content="0; url=home/">
