--- a/home/index.html
+++ b/home/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Spaceboi - Home</title>
     <meta content="Spaceboi - Home" property="og:title" />
-    <meta content="Hey there, I'm Joe 👋I'm a 21 y/o gaming and creative enthusiast from England. Specialties include Discord (Guilds/Bots), Minecraft Server Design, Digital Marketing, Web Design, Graphic Design, supporting you! Blending technical precision with digital flair!" property="og:description" />
-    <meta content="https://spaceboi.dev/" property="og:url" />
-    <meta content="https://spaceboi.dev/assets/img/profile.png" property="og:image" />
-    <meta content="#58007E" data-react-helmet="true" name="theme-color" />
+    <meta property="og:title" content="Spaceboi - Home" />
+    <meta property="og:description" content="Hey there, I'm Joe 👋 — 21 y/o Gaming enthusiast • Web Design • Graphic Design • Minecraft Servers" />
+    <meta property="og:url" content="https://spaceboi.dev/home/" />
+    <meta property="og:image" content="https://spaceboi.dev/assets/img/profile.png" />
     <meta name="twitter:card" content="summary">
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/buttons.css">
