--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Redirecting…</title>
     <meta property="og:title" content="Spaceboi - Home" />
-    <meta property="og:description" content="Hey there, I'm Joe 👋 — 21 y/o Gaming enthusiast • Web Design • Graphic Design • Minecraft Servers" />
+    <meta property="og:description" content="Hey there, I'm Joe 👋 — 21 y/o Gaming Enthusiast • Web Design • Graphic Design • Minecraft Servers" />
     <meta property="og:url" content="https://spaceboi.dev/home/" />
     <meta property="og:image" content="https://spaceboi.dev/assets/img/profile.png" />
     <meta content="#58007E" data-react-helmet="true" name="theme-color" />
