Correct capitalization in og:description meta tag

--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
     <title>Spaceboi - Home</title>
     <meta content="Spaceboi - Home" property="og:title" />
     <meta property="og:title" content="Spaceboi - Home" />
-    <meta property="og:description" content="Hey there, I'm Joe 👋 — 21 y/o Gaming enthusiast • Web Design • Graphic Design • Minecraft Servers" />
+    <meta property="og:description" content="Hey there, I'm Joe 👋 — 21 y/o Gaming Enthusiast • Web Design • Graphic Design • Minecraft Servers" />
     <meta property="og:url" content="https://spaceboi.dev/home/" />
     <meta property="og:image" content="https://spaceboi.dev/assets/img/profile.png" />
     <meta name="twitter:card" content="summary">
